Fix overflow, fix zoom at 1080p

--- a/assets/main.css
+++ b/assets/main.css
@@ -1,5 +1,5 @@
-@media (min-width: 1900px) {
+@media (min-width: 3000px) {
     :root {
-        font-size: 2.5rem;
+        font-size: 2rem;
     }
 }
